# design-patterns-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
abstract_factory/: CMakeLists.txt  README.md
abstract_factory/include/: DrinkFactory.hpp  HotDrink.hpp  HotDrinkFactory.hpp
abstract_factory/src/: main.cpp
array_backed_properties/: CMakeLists.txt  README.md
array_backed_properties/src/: main.cpp
bridge/: CMakeLists.txt  README.md
bridge/src/: main.cpp
builder/: CMakeLists.txt  README.md
builder/src/: main.cpp
builder_facets/: CMakeLists.txt  README.md
builder_facets/include/: Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.hpp  PersonJobBuilder.hpp
builder_facets/src/: Person.cpp  PersonBuilder.cpp  main.cpp
command/: CMakeLists.txt  README.md
command/src/: main.cpp
command_macro/: CMakeLists.txt  README.md
command_macro/src/: main.cpp
command_undo/: CMakeLists.txt  README.md
command_undo/src/: main.cpp
composite/: CMakeLists.txt  README.md
composite/src/: main.cpp
dependency_inversion/: CMakeLists.txt  README.md
dependency_inversion/src/: main.cpp
dynamic_decorator/: CMakeLists.txt  README.md
dynamic_decorator/src/: main.cpp
facade/: CMakeLists.txt  README.md
facade/include/: Console.h
facade/src/: main.cpp
factory_class/: CMakeLists.txt  README.md
factory_class/src/: main.cpp
factory_method/: CMakeLists.txt  README.md
factory_method/src/: main.cpp
fluent_builder/: CMakeLists.txt  README.md
fluent_builder/src/: main.cpp
flyweight_boost/: CMakeLists.txt  README.md
flyweight_boost/src/: main.cpp
flyweight_handmade/: CMakeLists.txt  README.md
flyweight_handmade/src/: main.cpp
flyweight_text_formatting/: CMakeLists.txt  README.md
flyweight_text_formatting/src/: main.cpp
functional_decorator/: CMakeLists.txt  README.md
functional_decorator/src/: main.cpp
functional_factory/: CMakeLists.txt  README.md
functional_factory/include/: DrinkFactory.hpp
functional_factory/src/: main.cpp
groovy_builder/: CMakeLists.txt  README.md
groovy_builder/src/: main.cpp
inner_factory/: CMakeLists.txt  README.md
inner_factory/src/: main.cpp
interface_segregation/: CMakeLists.txt  README.md
interface_segregation/src/: main.cpp
interpreter_handmade_lexing/: CMakeLists.txt  README.md
interpreter_handmade_lexing/src/: main.cpp
interpreter_handmade_parsing/: CMakeLists.txt  README.md
interpreter_handmade_parsing/src/: main.cpp
iterator_binary_tree/: CMakeLists.txt  README.md
iterator_binary_tree/src/: main.cpp
iterator_facade/: CMakeLists.txt  README.md
iterator_facade/src/: main.cpp
liskov_substitution/: CMakeLists.txt  README.md
liskov_substitution/src/: main.cpp
mediator/: CMakeLists.txt  README.md
mediator/include/: ChatRoom.hpp  Person.hpp
mediator/src/: ChatRoom.cpp  Person.cpp  main.cpp
mediator_event_broker/: CMakeLists.txt  README.md
mediator_event_broker/src/: main.cpp
memento/: CMakeLists.txt  README.md
memento/src/: main.cpp
memento_undo_redo/: CMakeLists.txt  README.md
memento_undo_redo/src/: main.cpp
monostate/: CMakeLists.txt  README.md
monostate/src/: main.cpp
multiton/: CMakeLists.txt  README.md
multiton/src/: main.cpp
neural_networks/: CMakeLists.txt  README.md
neural_networks/src/: main.cpp
observer/: CMakeLists.txt  README.md
observer/src/: main.cpp
observer_boost/: CMakeLists.txt  README.md
observer_boost/include/: Observable.hpp
observer_boost/src/: main.cpp
observer_dependency_issues/: CMakeLists.txt  README.md
observer_dependency_issues/include/: Observable.hpp
observer_dependency_issues/src/: main.cpp
observer_thread_safety/: CMakeLists.txt  README.md
observer_thread_safety/include/: Observer.hpp  SaferObservable.hpp
observer_thread_safety/src/: main.cpp
pimpl_idiom/: CMakeLists.txt  README.md
pimpl_idiom/include/: Person.hpp
pimpl_idiom/src/: Person.cpp
pimpl_shrink_wrapped/: CMakeLists.txt  README.md
pimpl_shrink_wrapped/include/: Person.hpp  pimpl.hpp
pimpl_shrink_wrapped/src/: Person.cpp  main.cpp
prototype/: CMakeLists.txt  README.md
prototype/src/: main.cpp
prototype_factory/: CMakeLists.txt  README.md
prototype_factory/src/: main.cpp
prototype_serialization/: CMakeLists.txt  README.md
prototype_serialization/src/: main.cpp
proxy_communication/: CMakeLists.txt  README.md
proxy_communication/src/: main.cpp
proxy_property/: CMakeLists.txt  README.md
proxy_property/src/: main.cpp
proxy_virtual/: CMakeLists.txt  README.md
proxy_virtual/src/: main.cpp
responsibility_chain_broker/: CMakeLists.txt  README.md
responsibility_chain_broker/src/: main.cpp
responsibility_chain_pointer/: CMakeLists.txt  README.md
responsibility_chain_pointer/src/: main.cpp
singleton/: CMakeLists.txt  README.md
singleton/src/: main.cpp
singleton_injection/: CMakeLists.txt  README.md
singleton_injection/src/: main.cpp
singleton_lifetime/: CMakeLists.txt  README.md
singleton_lifetime/src/: main.cpp
specification/: CMakeLists.txt  README.md
specification/src/: main.cpp
state_boost/: CMakeLists.txt  README.md
state_boost/src/: main.cpp
state_classic/: CMakeLists.txt  README.md
state_classic/src/: main.cpp
state_handmade/: CMakeLists.txt  README.md
state_handmade/src/: main.cpp
static_decorator/: CMakeLists.txt  README.md
static_decorator/src/: main.cpp
strategy_dynamic/: CMakeLists.txt  README.md
strategy_dynamic/src/: main.cpp
strategy_static/: CMakeLists.txt  README.md
strategy_static/src/: main.cpp
template_method/: CMakeLists.txt  README.md
template_method/src/: main.cpp
visitor_acyclic/: CMakeLists.txt  README.md
visitor_acyclic/src/: main.cpp
visitor_classic_double_dispatch/: CMakeLists.txt  README.md
visitor_classic_double_dispatch/src/: main.cpp
visitor_intrusive/: CMakeLists.txt  README.md
visitor_intrusive/src/: main.cpp
visitor_multimethods/: CMakeLists.txt  README.md
visitor_multimethods/src/: main.cpp
visitor_reflective/: CMakeLists.txt  README.md
visitor_reflective/src/: main.cpp
visitor_variant/: CMakeLists.txt  README.md
(+1 files in other folders)
